# zephyr_spmp

./: .gdbinit  .gitignore  README.md
arch/riscv/: Kconfig  Kconfig.core
arch/riscv/core/: CMakeLists.txt  cpu_idle.c  fatal.c  fpu.c  irq_manage.c  irq_offload.c  isr.S  pmp.S  pmp.c  prep_c.c  reset.S  sbi.c  smp.c  spmp.S  spmp.c  switch.S  thread.c
arch/riscv/include/: kernel_arch_func.h  spmp.h
boards/riscv/qemu_riscv64/: board.cmake  qemu_riscv64_defconfig  qemu_riscv64_smp_defconfig
cmake/emu/: qemu.cmake
drivers/interrupt_controller/: intc_plic.c
drivers/timer/: riscv_machine_timer.c
dts/riscv/: virt.dtb  virt.dtsi
include/zephyr/: cpumask.h  sbi.h
include/zephyr/arch/riscv/: arch.h  arch_inlines.h  csr.h  error.h  irq.h  sbi.h  thread.h
include/zephyr/linker/: linker-defs.h
kernel/: Kconfig  init.c
samples/hello_world/: CMakeLists.txt  prj.conf
samples/synchronization/: CMakeLists.txt  prj.conf
samples/synchronization/src/: main.c
samples/userspace/hello_world_user/: CMakeLists.txt  linker_riscv_qemu_ram1.ld  prj.conf
samples/userspace/linpack_float/: prj.conf
samples/userspace/linpack_float/src/: main.c
samples/userspace/lz77_malloc/: CMakeLists.txt  prj.conf
samples/userspace/lz77_malloc/src/: main.c
samples/userspace/matmul/: CMakeLists.txt  prj.conf
samples/userspace/matmul/src/: main.c
scripts/pylib/twister/twisterlib/: coverage.py  runner.py  testplan.py
soc/riscv/common/riscv-privileged/: soc_common_irq.c  soc_irq.S  vector.S
soc/riscv/esp32c3/: idle.c  power.c  soc.h
soc/riscv/openisa_rv32m1/: wdog.S
soc/riscv/virt/: Kconfig.defconfig
spmp_samples/hello_world_supervisor/: CMakeLists.txt  prj.conf
spmp_samples/hello_world_supervisor/src/: main.c
spmp_samples/userspace/hello_world_user/: CMakeLists.txt  prj.conf
spmp_samples/userspace/linpack_float/: CMakeLists.txt  prj.conf
spmp_samples/userspace/lz77_malloc/: CMakeLists.txt  prj.conf
spmp_samples/userspace/shared_mem/: CMakeLists.txt
spmp_samples/userspace/synchronization_smp/: CMakeLists.txt  prj.conf
subsys/canbus/isotp/: isotp.c
subsys/shell/: shell.c
(+28 files in other folders)
